--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
 </head>
 <body>
     <h1>TUX-FX</h1>
+    <div>Flou (5px)</div>
+    <div>Luminosité (200%)</div>
+    <div>Contraste (200%)</div>
+    <div>Ombre (20px 20px 5px gray)</div>
+    <div>Niveaux de gris (100%)</div>
+    <div>Teinte (180deg)</div>
+    <div>Inversion (100%)</div>
+    <div>Opacité (50%)</div>
+    <div>Saturation (50%)</div>
+    <div>Sépia (100%)</div>
 </body>
 </html>
