Ajout des auteurs

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <link rel="stylesheet" href="style.css">
+    <meta name="author" content="Émilia Beguin et Arthur Schneider">
 </head>
 <body>
     <h1>TUX-FX</h1>
