--- a/index.html
+++ b/index.html
@@ -5,5 +5,16 @@
 </head>
 <body>
     <h1>TUX-FX</h1>
+    <h1>TUX-FX <img src="tux.png" alt="tux"></h1>
+    <div>Flou (5px)<img src="tux.png" alt="tux"></div>
+    <div>Luminosité (200%)<img src="tux.png" alt="tux"></div>
+    <div>Contraste (200%)<img src="tux.png" alt="tux"></div>
+    <div>Ombre (20px 20px 5px gray)<img src="tux.png" alt="tux"></div>
+    <div>Niveaux de gris (100%)<img src="tux.png" alt="tux"></div>
+    <div>Teinte (180deg)<img src="tux.png" alt="tux"></div>
+    <div>Inversion (100%)<img src="tux.png" alt="tux"></div>
+    <div>Opacité (50%)<img src="tux.png" alt="tux"></div>
+    <div>Saturation (50%)<img src="tux.png" alt="tux"></div>
+    <div>Sépia (100%)<img src="tux.png" alt="tux"></div>
 </body>
 </html>
