--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 </head>
 <body>
     <h1>TUX-FX</h1>
-    <div>Flou (5px)<img src="tux.png" alt="tux"></div>
-    <div>Luminosité (200%)<img src="tux.png" alt="tux"></div>
-    <div>Contraste (200%)<img src="tux.png" alt="tux"></div>
-    <div>Ombre (20px 20px 5px gray)<img src="tux.png" alt="tux"></div>
-    <div>Niveaux de gris (100%)<img src="tux.png" alt="tux"></div>
-    <div>Teinte (180deg)<img src="tux.png" alt="tux"></div>
-    <div>Inversion (100%)<img src="tux.png" alt="tux"></div>
-    <div>Opacité (50%)<img src="tux.png" alt="tux"></div>
-    <div>Saturation (50%)<img src="tux.png" alt="tux"></div>
-    <div>Sépia (100%)<img src="tux.png" alt="tux"></div>
+    <main class="images">
+        <div>Flou (5px)<img class="blur " src="tux.png" alt="tux"></div>
+        <div>Luminosité (200%)<img class="brightness" src="tux.png" alt="tux"></div>
+        <div>Contraste (200%)<img class="constrast" src="tux.png" alt="tux"></div>
+        <div>Ombre (20px 20px 5px gray)<img class="shadow" src="tux.png" alt="tux"></div>
+        <div>Niveaux de gris (100%)<img class="gray" src="tux.png" alt="tux"></div>
+        <div>Teinte (180deg)<img class="hue" src="tux.png" alt="tux"></div>
+        <div>Inversion (100%)<img class="invert" src="tux.png" alt="tux"></div>
+        <div>Opacité (50%)<img class="opacity" src="tux.png" alt="tux"></div>
+        <div>Saturation (50%)<img class="saturate" src="tux.png" alt="tux"></div>
+        <div>Sépia (100%)<img class="sepia" src="tux.png" alt="tux"></div>
+    </main>
 </body>
 </html>
